--- a/dockerfiles/dind/Dockerfile
+++ b/dockerfiles/dind/Dockerfile
@@ -14,15 +14,16 @@ ENV DOCKERAPP_VERSION=v0.9.1-beta3
 ENV COMPOSE_VERSION=1.26.0
 
 ENV CRYPTOGRAPHY_DONT_BUILD_RUST=1
-
-RUN pip install docker-compose==${COMPOSE_VERSION}
+RUN pip install --upgrade pip --break-system-packages
+RUN pip install "cython<3.0.0" wheel --break-system-packages
+RUN pip install PyYAML==5.4.1 --no-build-isolation --break-system-packages
+RUN pip install docker-compose==${COMPOSE_VERSION} --break-system-packages
 
 RUN curl -fsSL --output /tmp/docker-app-linux.tar.gz https://github.com/docker/app/releases/download/${DOCKERAPP_VERSION}/docker-app-linux.tar.gz \
     && tar xf "/tmp/docker-app-linux.tar.gz" -C /tmp/ && mkdir -p /root/.docker/cli-plugins && mv /tmp/docker-app-plugin-linux /root/.docker/cli-plugins/docker-app && rm /tmp/docker-app*
 
 # Add bash completion and set bash as default shell
-RUN mkdir /etc/bash_completion.d \
-    && curl https://raw.githubusercontent.com/docker/cli/master/contrib/completion/bash/docker -o /etc/bash_completion.d/docker \
+RUN curl https://raw.githubusercontent.com/docker/cli/master/contrib/completion/bash/docker -o /etc/bash_completion.d/docker \
     && sed -i "s/ash/bash/" /etc/passwd
  
 # Replace modprobe with a no-op to get rid of spurious warnings
