--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
             REGISTRY_HTTP_TLS_CERTIFICATE: /certs/domain.crt
             REGISTRY_HTTP_TLS_KEY: /certs/domain.key
         volumes:
-            - /var/lib/images/registry:/var/lib/registry
+            - ./registry:/var/lib/registry
             - ./certs:/certs
         restart: always
         networks:
